# UnicodeFix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  output-clean.txt  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/workflows/: README.md  ci.yaml  ci.yml
data/: .DS_Store.clean  test_ai_a_1.txt  test_ai_a_2.txt  test_ai_a_3.txt  test_ai_a_4.txt  test_ai_a_5.txt  test_ai_h_6.txt  test_ai_h_7.txt  test_sample.c  test_sample.md  test_sample.py  test_sample2.c  test_sample2.py  unicode-tst.bin.txt
docs/: api.md  cleanup-text.md  test-suite.md
macOS/: Strip Unicode.shortcut
src/: __init__.py
src/unicodefix/: cli.py  metrics.py  nlp.py  report.py  scanner.py  transforms.py
test/: test_all.sh
tests/: conftest.py  test_all.sh  test_cli_report.py  test_metrics.sh  test_scanner.py  test_transforms.py  wcfiles.data
