[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "unicodefix"
version = "1.1.2"
description = "Clean Unicode quirks and audit text."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ftfy>=6.2",
  "rich>=13.7"
]

[project.optional-dependencies]
nlp = ["nltk>=3.9"]

[project.scripts]
cleanup-text = "unicodefix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unicodefix"]
