[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "unicodefix"
version = "1.2.0"
description = "Clean Unicode quirks and audit text."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ftfy>=6.2",
  "rich>=13.7"
]

[project.urls]
Homepage = "https://github.com/unixwzrd/UnicodeFix"
Repository = "https://github.com/unixwzrd/UnicodeFix"
Changelog = "https://github.com/unixwzrd/UnicodeFix/blob/main/CHANGELOG.md"
Documentation = "https://github.com/unixwzrd/UnicodeFix/blob/main/docs/cleanup-text.md"

[project.optional-dependencies]
nlp = ["nltk>=3.9"]
dev = [
    "black>=24.0",
    "ruff>=0.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cleanup-text = "unicodefix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unicodefix"]
